--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+        
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v3
     
