update Java compatibility to version 17 and refactor MapperProcessor to use records for DTOs

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ plugins {
 group = 'dev.ourrai'
 version = '1.0-SNAPSHOT'
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
 repositories {
     mavenCentral()
 }
@@ -23,6 +28,10 @@ dependencies {
     
     testAnnotationProcessor project
     testImplementation project
+}
+
+tasks.withType(JavaCompile) {
+    options.release = 17
 }
 
 tasks.withType(Jar) {
